<resources>
    <string name="app_name">Mascodys</string>
    <string name="veterinario_BUTTON">VETERINARIO</string>
    <string name="administrador_BUTTON">ADMINISTRADOR</string>
    <string name="cliente_BUTTON">CLIENTE</string>
    <string name="email">EMAIL O TELEFONO</string>
    <string name="contraseña">CONTRASEÑA</string>
    <string name="todo">TODO</string>
    <string name="INGRESA">ingresa</string>
    <string name="n_documento">N°DOCUMENTO</string>
    <string name="direccion">DIRECCION</string>
    <string name="departamento">DEPARTAMENTO</string>
    <string name="nombre_completo">Nombre completo</string>
    <string name="municipio">MUNICIPIO</string>
    <string name="contrase_a">CONTRASEÑA</string>
    <string name="confirma_contrase_a">CONFIRMA CONTRASEÑA</string>
    <string name="email_o_telefono">EMAIL O TELEFONO</string>
    <string name="hint">***</string>
    <string name="registrarse">REGISTRARSE</string>
    <string name="hintt">************</string>
    <string name="ejemplo_gmail_com">ejemplo@gmail.com</string>
    <string name="registro">REGISTRO</string>
</resources>