<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registro">


    <TextView
        android:id="@+id/txtdocumento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="101dp"
        android:text="@string/n_documento"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/txtingresedo"
        android:layout_width="82dp"
        android:layout_height="34dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="17dp"
        android:layout_marginTop="125dp"
        android:layout_marginEnd="308dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="379dp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="163dp"
        android:text="@string/direccion"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="286dp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="294dp"
        android:text="@string/departamento"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="220dp" />

    <EditText
        android:id="@+id/editTextTextEmailAddress8"
        android:layout_width="196dp"
        android:layout_height="36dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"

        android:layout_centerInParent="true"
        android:layout_marginStart="17dp"
        android:layout_marginTop="188dp"
        android:layout_marginEnd="196dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="177dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="40dp"
        android:text="@string/nombre_completo"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="83dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="228dp"
        android:layout_marginBottom="484dp"
        android:text="@string/municipio"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="158dp" />

    <EditText
        android:id="@+id/editTextTextEmailAddress7"
        android:layout_width="378dp"
        android:layout_height="36dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="19dp"
        android:layout_marginTop="317dp"
        android:layout_marginEnd="13dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="110dp" />

    <EditText
        android:id="@+id/editTextTextEmailAddress6"
        android:layout_width="196dp"
        android:layout_height="36dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="253dp"
        android:layout_marginEnd="196dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="239dp" />

    <EditText
        android:id="@+id/editTextTextEmailAddress5"
        android:layout_width="378dp"
        android:layout_height="36dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="17dp"
        android:layout_marginTop="63dp"
        android:layout_marginEnd="15dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="305dp" />

    <TextView
        android:id="@+id/txtcontraseña"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="434dp"
        android:text="@string/contrase_a"
        tools:layout_editor_absoluteX="230dp"
        tools:layout_editor_absoluteY="466dp" />

    <TextView
        android:id="@+id/txtcontraseñac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="496dp"
        android:text="@string/confirma_contrase_a"
        tools:layout_editor_absoluteX="230dp"
        tools:layout_editor_absoluteY="466dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="19dp"
        android:layout_marginTop="359dp"
        android:text="@string/email_o_telefono"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="466dp" />

    <EditText
        android:id="@+id/editTextC"
        android:layout_width="203dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="14dp"
        android:layout_marginTop="521dp"
        android:layout_marginEnd="194dp"
        android:ems="10"
        android:hint="@string/hint"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="494dp" />

    <Button
        android:id="@+id/registrarse"
        android:layout_width="269dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="74dp"
        android:layout_marginTop="556dp"
        android:onClick="onClick"
        android:text="@string/registrarse"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="586dp" />

    <EditText
        android:id="@+id/editTextTextEmailAddress4"
        android:layout_width="203dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="458dp"
        android:layout_marginEnd="190dp"
        android:ems="10"
        android:hint="@string/hintt"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="494dp" />

    <EditText
        android:id="@+id/editTextTextEmailAddress3"
        android:layout_width="365dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="17dp"

        android:layout_marginTop="382dp"
        android:ems="10"
        android:hint="@string/ejemplo_gmail_com"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="494dp" />

    <TextView
        android:id="@+id/txtregistro"
        android:layout_width="84dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="169dp"
        android:layout_marginTop="14dp"
        android:text="REGISTRO"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="466dp" />


</RelativeLayout>